feat: parse xml info from first endpoint into types
Tests have also been added to validate the api data against the
defined types in ./src/interfaces.ts

--- a/todo.org
+++ b/todo.org
@@ -121,3 +121,4 @@ CLOCK: [2022-03-16 Wed 21:08]--[2022-03-16 Wed 21:25] =>  0:17
 ** TODO add linter
 ** TODO move test data to constants file
 - allows for security and controls
+** TODO Add xml api endpoint data validation against defined schema
