--- a/todo.org
+++ b/todo.org
@@ -99,8 +99,12 @@ CLOCK: [2022-03-16 Wed 21:08]--[2022-03-16 Wed 21:25] =>  0:17
   - the main things to note is that this is a list of items
   - each item has a vehicle type id and a vehicle type name
   - these are the main pieces of information we need to keep for our output data
-* TODO write function to get vehicle types for make
-* TODO write function to transform pl format to json
+* DONE write function to get vehicle types for make
+:LOGBOOK:
+CLOCK: [2022-03-16 Wed 21:41]--[2022-03-16 Wed 21:56] =>  0:15
+:END:
+- added function
+- added test
 * TODO create mongodb docker scripts
 * TODO store information in mongodb
 * TODO expose api
@@ -122,3 +126,4 @@ CLOCK: [2022-03-16 Wed 21:08]--[2022-03-16 Wed 21:25] =>  0:17
 ** TODO move test data to constants file
 - allows for security and controls
 ** TODO Add xml api endpoint data validation against defined schema
+- with specific known inputs and outputs
