--- a/todo.org
+++ b/todo.org
@@ -57,7 +57,7 @@ CLOCK: [2022-03-16 Wed 21:08]--[2022-03-16 Wed 21:25] =>  0:17
   #+END_SRC
   - the format is a list of vehicles with a make_id and a make_name
   - make_id to be used to get more information from the second endpoint
-* TODO study output format
+* DONE study output format
 - studying the output format in the gist
 - we want an array like so:
   #+BEGIN_SRC javascript
@@ -99,6 +99,11 @@ CLOCK: [2022-03-16 Wed 21:08]--[2022-03-16 Wed 21:25] =>  0:17
   - the main things to note is that this is a list of items
   - each item has a vehicle type id and a vehicle type name
   - these are the main pieces of information we need to keep for our output data
+* TODO convert into output format [0/1]
+** TODO write a function where given an input for a single make:
+  - all makes item result: VehicleMake
+  - vehicle types for make: VehicleTypesForMakeID
+  - return the expected output: ExpectedOutputSingle
 * DONE write function to get vehicle types for make
 :LOGBOOK:
 CLOCK: [2022-03-16 Wed 21:41]--[2022-03-16 Wed 21:56] =>  0:15
